Revises similar jobs to include guidelines. Fixes issue with contrast . [Amends #109]

--- a/css/usajobs-design-system-components.css
+++ b/css/usajobs-design-system-components.css
@@ -30897,16 +30897,21 @@ html {
   line-height: 1.3;
   margin-bottom: 0.5rem;
   margin-top: 1.5rem;
-  font-size: 19px;
-  font-size: 1.9rem;
+  font-size: 24px;
+  font-size: 2.4rem;
   display: block;
   padding: 0.5rem 0;
   margin: 1.5rem 0;
 }
 
+.usajobs-joa-occupations__link {
+  border-radius: .5rem;
+}
+
 .usajobs-joa-occupations__series {
   display: block;
   padding: 0.5rem 0;
+  font-size: 19px;
 }
 
 .usajobs-joa-occupations .is-mco {
